--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@mysql/xdevapi": "8.0.20",
     "@hapi/joi": "17.1.1",
     "@types/jest": "25.1.4",
     "body-parser": "1.19.0",
