--- a/front-end/package.json
+++ b/front-end/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "prop-types": "^15.7.2",
+    "react-burger-menu": "^2.7.1",
     "@testing-library/jest-dom": "4.2.4",
     "@testing-library/react": "9.5.0",
     "@testing-library/user-event": "7.2.1",
@@ -15,6 +17,8 @@
     "react-scripts": "3.4.1"
   },
   "devDependencies": {
+    "stylelint": "^13.8.0",
+    "stylelint-config-standard": "^20.0.0",
     "eslint": "6.8.0",
     "mocha": "7.0.1",
     "@typescript-eslint/eslint-plugin": "2.34.0",
